# m1_data_env

./: .gitignore  README.md  shell.nix
kafka_rust/: Cargo.toml
kafka_rust/src/: main.rs
python_m1_datascience/: pyproject.toml
python_m1_datascience/notebooks/: small_pandas_seaborn.ipynb  tf_m1_gpu_available.ipynb
