[tool.poetry]
name = "python_m1_datascience"
version = "0.1.0"
description = ""
authors = ["Ulrich Ludmann <uli@ul-cps.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
tensorflow-metal = "^1.0.1"
tensorflow-macos = "^2.13.0"
jupyterlab = "^4.0.2"
duckdb = "^0.8.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
